# MarkovMidi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Initialization.cpp  Initialization.hpp  Markov.cpp  Markov.hpp  MidiPlayer.cpp  MidiPlayer.hpp  MusicalFunctions.cpp  MusicalFunctions.hpp  Note.cpp  Note.hpp  randomness.hpp
